# ChitChat

./: CMakeLists.txt  LICENSE  README.md  audio_server.cpp  audio_testing.cpp  client_socket.cpp  login.cpp  main.cpp  main_window.cpp  main_window.h  run_server.cpp  server_testing.cpp  socket.cpp  sprite.cpp  sprite.h  user.h
.github/workflows/: format-on-push.yml  main.yml
audio/: call.cpp  call.h  call.pro  main.cpp
audio/server/: server.cpp  server.h  server.pro
client/: CMakeLists.txt  client.h  client_socket.cpp  client_socket.h  client_user.cpp  client_user.h  database.cpp  database.h  game_selection.cpp  game_selection.h  game_selection.h.autosave  game_selection.ui  login.cpp  login.h  login.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  model.cpp  model.h  rating.cpp  rating.h  rating.h.autosave  rating.ui  registration.cpp  registration.h  registration.ui  room.cpp  room.h  socket.cpp  sprite.cpp  sprite.h  user.h  view.cpp  view.h  voice_manager.cpp  voice_manager.h
entities/: socket.cpp  socket.h  user.h
games/arkanoid/: main.cpp
games/arkanoid/include/: Ball.h  Config.h  Game.h  Platform.h
games/arkanoid/src/: Ball.cpp  Game.cpp  Platform.cpp
games/hangman/: button.cpp  game_hangman.cpp  game_hangman.h  game_hangman.ui  main.cpp
hangman/: CMakeLists.txt  button.cpp  button.h  game_hangman.cpp  game_hangman.h  hangman_game.cpp  hangman_game.h  main.cpp  mainwindow.h
resources/: resources.qrc
server/: database.cpp  database.h  model.cpp  model.h  server.cpp  server.h  server_user.h  state.cpp  state.h  voice_manager.cpp  voice_manager.h
shared/: abstract_game.h  message.pb.cc  message.pb.h  message.proto  socket.cpp  socket.h  user.h
